--- a/.envs/.env.local
+++ b/.envs/.env.local
@@ -8,11 +8,11 @@ CELERY_FLOWER_USER=""
 CELERY_FLOWER_PASSWORD=""
 CELERY_BROKER_URL=""
 CELERY_RESULT_BACKEND=""
-POSTGRES_HOST=""
-POSTGRES_PORT=""
-POSTGRES_DB=""
-POSTGRES_USER=""
-POSTGRES_PASSWORD=""
+POSTGRES_HOST="postgres"
+POSTGRES_PORT="5432"
+POSTGRES_DB="postgres"
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="password"
 CLOUDINARY_CLOUD_NAME=""
 CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
