Add auth configurations

--- a/.envs/.env.local
+++ b/.envs/.env.local
@@ -4,20 +4,20 @@ DJANGO_ADMIN_URL="backend"
 EMAIL_PORT="25"
 EMAIL_HOST=""
 DEFAULT_FROM_EMAIL=""
-CELERY_FLOWER_USER=""
-CELERY_FLOWER_PASSWORD=""
-CELERY_BROKER_URL=""
-CELERY_RESULT_BACKEND=""
+CELERY_FLOWER_USER="admin"
+CELERY_FLOWER_PASSWORD="Pass1234@"
+CELERY_BROKER_URL="redis://redis:6379/0"
+CELERY_RESULT_BACKEND="redis://redis:6379/0"
 POSTGRES_HOST="postgres"
 POSTGRES_PORT="5432"
 POSTGRES_DB="postgres"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="password"
-CLOUDINARY_CLOUD_NAME=""
-CLOUDINARY_API_KEY=""
-CLOUDINARY_API_SECRET=""
-COOKIE_SECURE=""
-SIGNING_KEY=""
+CLOUDINARY_CLOUD_NAME="bangdigi"
+CLOUDINARY_API_KEY="739441724199945"
+CLOUDINARY_API_SECRET="zGnb3S6hZ4VKm5znQnbysA2Cjcs"
+COOKIE_SECURE="False"
+SIGNING_KEY="somesecretkeyhere"
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 REDIRECT_URIS=""
