--- a/docker/local/django/Dockerfile
+++ b/docker/local/django/Dockerfile
@@ -56,6 +56,29 @@ RUN sed -i 's/\r$//g' /start
 
 RUN chmod +x /start
 
+# Setup for celery and flower
+
+COPY --chown=django:django ./docker/local/django/celery/worker/start.sh /start-celeryworker
+
+RUN sed -i 's/\r$//g' /start-celeryworker
+
+RUN chmod +x /start-celeryworker
+
+COPY --chown=django:django ./docker/local/django/celery/beat/start.sh /start-celerybeat
+
+RUN sed -i 's/\r$//g' /start-celerybeat
+
+RUN chmod +x /start-celerybeat
+
+COPY --chown=django:django ./docker/local/django/celery/flower/start.sh /start-flower
+
+RUN sed -i 's/\r$//g' /start-flower
+
+RUN chmod +x /start-flower
+
+
+
+
 COPY --chown=django:django . ${APP_HOME}
 
 RUN chown django:django ${APP_HOME}
