--- a/local.yml
+++ b/local.yml
@@ -1,23 +1,27 @@
+#https://stackoverflow.com/questions/60853414/python-celery-trying-to-occupy-a-port-number-in-docker-compose-and-creating-prob
+
 services:
-  api: &api # Create an anchor
+  common-api-settings: &api-settings
     build: 
-      context: . #root directory
-      dockerfile: ./docker/local/django/Dockerfile
-    image: estate_prod_api
-    container_name: estate_prod_api
+        context: . #root directory
+        dockerfile: ./docker/local/django/Dockerfile
     volumes:
-      - .:/app:z
+      - /home/projects/django/estate-management/django:/app:z
       - staticfiles:/app/staticfiles:z
-    ports:
-      - "8002:8000"
     env_file:
       - ./.envs/.env.local
     depends_on:
       - postgres
       - mailpit
-    command: /start
     networks:
       - estate_network
+  api: 
+    <<: *api-settings
+    image: estate_prod_api
+    container_name: estate_prod_api
+    ports:
+      - "8003:8000"
+    command: /start
 
   postgres:
     build: 
@@ -33,6 +37,37 @@ services:
       - ./.envs/.env.local
     networks:
       - estate_network
+  
+  redis:
+    image: redis:7.0-alpine3.19
+    command: ["redis-server", "--appendonly", "yes"]
+    container_name: estate_redis
+    volumes:
+      - estate_redis_data:/data
+    ports:
+      - "6380:6379"
+    networks:
+      - estate_network
+
+  celeryworker:
+    <<: *api-settings
+    image: estate_celeryworker
+    command: /start-celeryworker
+    container_name: estate_celeryworker
+
+  celerybeat:
+    <<: *api-settings
+    image: estate_celerybeat
+    command: /start-celerybeat
+    container_name: estate_celerybeat
+
+  flower:
+    <<: *api-settings
+    image: estate_flower
+    command: /start-flower
+    container_name: estate_flower
+    ports:
+      - "5555:5555"
 
   mailpit:
     image: axllent/mailpit
@@ -58,3 +93,4 @@ volumes:
   estate_postgres_data: {}
   estate_mailpit_data: {}
   staticfiles: {}
+  estate_redis_data: {}
