--- a/.envs/.env.local
+++ b/.envs/.env.local
@@ -14,8 +14,8 @@ POSTGRES_DB="postgres"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="password"
 CLOUDINARY_CLOUD_NAME="bangdigi"
-CLOUDINARY_API_KEY="739441724199945"
-CLOUDINARY_API_SECRET="zGnb3S6hZ4VKm5znQnbysA2Cjcs"
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
 COOKIE_SECURE="False"
 SIGNING_KEY="somesecretkeyhere"
 GOOGLE_CLIENT_ID=""
