Fix flower by change celery file position

--- a/.envs/.env.local
+++ b/.envs/.env.local
@@ -1,9 +1,9 @@
 SITE_NAME="LOCAL REAL ESTATE"
 DJANGO_SECRET_KEY=""
 DJANGO_ADMIN_URL="backend"
-EMAIL_PORT="25"
-EMAIL_HOST=""
-DEFAULT_FROM_EMAIL=""
+EMAIL_PORT="1025"
+EMAIL_HOST="mailpit"
+DEFAULT_FROM_EMAIL="admin@test.com"
 CELERY_FLOWER_USER="admin"
 CELERY_FLOWER_PASSWORD="Pass1234@"
 CELERY_BROKER_URL="redis://redis:6379/0"
