Authentication test ok

--- a/.envs/.env.local
+++ b/.envs/.env.local
@@ -1,6 +1,7 @@
 SITE_NAME="LOCAL REAL ESTATE"
-DJANGO_SECRET_KEY=""
+DJANGO_SECRET_KEY="somesupersecretkeyhere"
 DJANGO_ADMIN_URL="backend"
+DOMAIN="localhost:8083"
 EMAIL_PORT="1025"
 EMAIL_HOST="mailpit"
 DEFAULT_FROM_EMAIL="admin@test.com"
@@ -21,3 +22,4 @@ SIGNING_KEY="somesecretkeyhere"
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 REDIRECT_URIS=""
+SECRET_KEY="somesupersecretkeyhere"
