Add some celery tasks in users

--- a/.envs/.env.local
+++ b/.envs/.env.local
@@ -15,11 +15,11 @@ POSTGRES_DB="postgres"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="password"
 CLOUDINARY_CLOUD_NAME="bangdigi"
-CLOUDINARY_API_KEY=""
-CLOUDINARY_API_SECRET=""
+CLOUDINARY_API_KEY="767199611942343"
+CLOUDINARY_API_SECRET="rfyDrXlr2jFN3PtZEX-5tsFv5gk"
 COOKIE_SECURE="False"
 SIGNING_KEY="somesecretkeyhere"
-GOOGLE_CLIENT_ID=""
-GOOGLE_CLIENT_SECRET=""
-REDIRECT_URIS=""
+GOOGLE_CLIENT_ID="34148215090-kllubl0l61jlfg0pl3q38ahcneeovu58.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+REDIRECT_URIS="http://localhost:8003/api/v1/auth/google"
 SECRET_KEY="somesupersecretkeyhere"
